--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </header>
 
   <main>
-    <section class="controls" class="bac>
+    <section class="controls">
       <label>
         Crop
         <select id="crop">
@@ -40,6 +40,6 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  <script src="/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
